docs(simple-bank): adicionada documentação swagger para health
